--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,14 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  background-color: #ffdde2;
+  opacity: 1;
+  background-image:  linear-gradient(#fff0f2 1.85px, transparent 1.85px), linear-gradient(to right, #fff0f2 1.85px, #ffdde2 1.85px);
+  background-size: 56px 56px;
 }
 
 a {
@@ -13,4 +19,19 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+p {
+  margin-top: 0;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.intro-window {
+  max-width: 500px;
 }
